syntax = "proto3";

package sec05;

import "google/protobuf/empty.proto";

option java_package = "com.models.sec05";
option java_multiple_files = true;

message BalanceCheckReq {
  int32 account_number = 1;
}

message BalanceCheckResp {
  int32 account_number = 1;
  int32 balance = 2;
}

message NoParam {
}

message AllAccountsResp {
  repeated BalanceCheckResp accounts = 1;
}

message WithdrawReq {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

/*message DepositRequest {
  int32 account_number = 1;
  Money money = 2;
}*/
// incase you dont want to send the account number in the request again and again
message DepositRequest {
  oneof request {
    int32 account_number = 1;
    Money money = 2;
  }
}

message TransferReq {
  int32 from_account = 1;
  int32 to_account = 2;
  int32 amount = 3;
}

enum TransferStatus {
  REJECTED = 0;
  ACCEPTED = 1;
}

message TransferResp {
  TransferStatus status = 1;
  BalanceCheckResp from = 2;
  BalanceCheckResp to = 3;
}

service BankService {
  // Undary RPC
  rpc getAccountBalance(BalanceCheckReq) returns (BalanceCheckResp);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResp);

  // Server stream
  rpc Withdraw(WithdrawReq) returns (stream Money);

  // Client stream
  rpc Deposit(stream DepositRequest) returns (BalanceCheckResp);
  //Bi-directional stream
  rpc Transfer(stream TransferReq) returns (stream TransferResp);
}
